# VoteChain

./: README.md
api/: api.js  dao.meta.wasm  dao.opt.wasm  package-lock.json  package.json
contracts/: .gitignore  Cargo.toml
contracts/Dao/: Cargo.toml
contracts/Dao/src/: io.rs  lib.rs  messages.rs  state.rs  utils.rs
contracts/actor/: Cargo.toml
contracts/actor/actor_io/: Cargo.toml
contracts/actor/io/: Cargo.toml
contracts/actor/io/src/: lib.rs
contracts/actor/src/: lib.rs  proposalMessages.rs
contracts/proposal/proposalIO/: Cargo.toml
contracts/proposal/proposal_io/: Cargo.toml
contracts/proposal/proposal_io/src/: lib.rs
contracts/superActor/: Cargo.toml
contracts/superActor/src/: proposalMessages.rs
contracts/superActor/superActor_io/: Cargo.toml
contracts/superActor/superActor_io/src/: lib.rs
website/: candidatos.html  index.html  tutorial.html  votacion-exito.html  votacion-wallet.html  votacion.html  votos.html  wallet.html
website/assets/css/: cubus.css
website/assets/js/: cubus.js
website/assets/vendors/bxslider/: jquery.bxslider.min.js
website/assets/vendors/itplayer/css/: YTPlayer.css
